# ChangeLog for x11-libs/libwnck
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.196 2008/05/07 03:37:46 dirtyepic Exp $

  07 May 2008; Ryan Hill <dirtyepic@gentoo.org> libwnck-2.22.1.ebuild:
  Keyword for mips.

*libwnck-2.22.1 (09 Apr 2008)

  09 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +libwnck-2.22.1.ebuild:
  bump to 2.22.1, patches are gone.

*libwnck-2.22.0 (21 Mar 2008)

  21 Mar 2008; Mart Raudsepp <leio@gentoo.org>
  +files/2.22.0/001-logout-crash.patch,
  +files/2.22.0/002-demands-attention-visibility-with-viewports.patch,
  +files/2.22.0/003-Unstick-windows-when-moving-them-to-another-viewport.pat
  ch, +files/2.22.0/004-Fix-moving-window-to-an-arbitrary-viewport.patch,
  +files/2.22.0/005-gtk-doc-die-die-die.patch, +libwnck-2.22.0.ebuild:
  New version for GNOME-2.22, with mostly bug fixes and code correctness
  improvements. Also apply patches from upstream for various viewport (compiz
  usage) related fixes

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> libwnck-2.20.3.ebuild:
  Stable for HPPA (bug #208366).

  03 Feb 2008; Raúl Porcel <armin76@gentoo.org> libwnck-2.20.3.ebuild:
  alpha/ia64/sparc stable wrt #208366

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> libwnck-2.20.3.ebuild:
  Stable on amd64 wrt bug #208366.

  01 Feb 2008; Brent Baude <ranger@gentoo.org> libwnck-2.20.3.ebuild:
  Marking libwnck-2.20.3 ppc64 and ppc stable for bug 208366

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  libwnck-2.20.3.ebuild:
  stable x86, bug 208366

*libwnck-2.20.3 (09 Jan 2008)

  09 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -libwnck-2.14.2.ebuild, -libwnck-2.16.3.ebuild, -libwnck-2.18.2.ebuild,
  +libwnck-2.20.3.ebuild:
  bump to 2.20.3 and cleanup old revisions

*libwnck-2.20.2 (05 Dec 2007)

  05 Dec 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +libwnck-2.20.2.ebuild:
  bump to 2.20.2
